Added styling and rendering based off of authentication

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,68 +1,95 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-body {
-  font-family: Arial;
-  padding: 20px;
-  background: #f1f1f1;
-}
+        body {
+            font-family: Arial;
+            padding: 20px;
+            background: lightblue;
+        }
 
-.header {
-  padding: 2px;
-  font-size: 40px;
-  text-align: center;
-  background: white;
-}
+        .title {
+            padding: 2px;
+            font-size: 40px;
+            text-align: center;
+            background: white;
+            color: darkblue;
 
-.leftcolumn {
-  float: left;
-  width: 100%;
-}
+        }
 
-.card {
-   background-color: white;
-   padding: 20px;
-   margin-top: 20px;
-}
+        .status {
+            text-align: right;
+            font-size: 30px;
+        }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {
-    width: 100%;
-    padding: 0;
-  }
-}
-</style>
+        .leftcolumn {
+            float: left;
+            width: 100%;
+        }
+
+        .card {
+            background-color: white;
+            padding: 20px;
+            margin-top: 20px;
+        }
+
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        @media screen and (max-width: 800px) {
+            .leftcolumn {
+                width: 100%;
+                padding: 0;
+            }
+        }
+    </style>
 </head>
 <body>
 
-<div class="header">
-  <h2>Cisco's Blog</h2>
+
+<div class="status">
+    {% if user.is_authenticated %}
+        <p>
+            <a style="text-decoration: none" href="logout">Logout</a>
+        </p>
+    {% else %}
+        <p>
+            <a style="text-decoration: none" href="login">Login</a>
+        </p>
+    {% endif %}
+</div>
+
+<div class="title">
+    <h2>Cisco's Blog</h2>
 </div>
 
 <div class="row">
-  <div class="leftcolumn">
-    {% for post in posts reversed %}
-    <div class="card">
-      <a style="text-decoration: none; color: black;" href="/post/{{post.id}}">
-        <h2>{{post.title}}</h2>
-        <h5>{{post.created_at}}</h5>
-        <p>{{post.body|truncatewords:20}}</p>
-      </a>
+    <div class="leftcolumn">
+        {% for post in posts reversed %}
+            <div class="card">
+                {% if user.is_authenticated %}
+                    <a style="text-decoration: none; color: darkblue;" href="/post/{{ post.id }}">
+                        <h2>{{ post.title }}</h2>
+                        <h5>{{ post.created_at }}</h5>
+                        <p>{{ post.body|truncatewords:20 }}</p>
+                    </a>
+                    {% else %}
+                        <h2>Post #{{ post.id }}</h2>
+                        <h5>{{ post.created_at }}</h5>
+                        <h4>Login To View Post</h4>
+                {% endif %}
+            </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-  </div>
 </div>
 
 </body>
