--- a/static/style.css
+++ b/static/style.css
@@ -1,26 +1,27 @@
 body {
-        background-color: lightblue;
-        font-family: 'Ubuntu', sans-serif;
-    }
+    background-color: lightblue;
+    font-family: 'Ubuntu', sans-serif;
+}
 
-    .main {
-        background-color: #FFFFFF;
-        width: 400px;
-        height: 400px;
-        margin: 7em auto;
-        border-radius: 1.5em;
-        box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
-    }
+/*Login.html css*/
+.login-main {
+    background-color: #FFFFFF;
+    width: 400px;
+    height: 400px;
+    margin: 7em auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
 
-    .sign {
-        padding-top: 40px;
-        color: darkblue;
-        font-family: 'Ubuntu', sans-serif;
-        font-weight: bold;
-        font-size: 23px;
-    }
+.header {
+    padding-top: 40px;
+    color: darkblue;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+    font-size: 23px;
+}
 
-    .input {
+.input {
     width: 76%;
     color: rgb(38, 50, 56);
     font-weight: 700;
@@ -35,46 +36,65 @@ body {
     text-align: center;
     margin-bottom: 35px;
     font-family: 'Ubuntu', sans-serif;
+}
+
+form.form {
+    padding-top: 30px;
+}
+
+
+.input:focus {
+    border: 2px solid rgba(0, 0, 0, 0.18) !important;
+
+}
+
+.submit {
+    cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #2732b0, #4059fb);
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-left: 0%;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    text-decoration: none
+}
+
+.signup-link {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: #93cbef;
+    padding-top: 20px;
+    text-decoration: none;
+}
+
+
+@media (max-width: 600px) {
+    .main {
+        border-radius: 0px;
     }
+}
 
-    form.form1 {
-        padding-top: 30px;
-    }
+/* signup.html specific CSS */
+.signup-main {
+    background-color: #FFFFFF;
+    width: 400px;
+    height: 550px;
+    margin: 7em auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
 
-
-    .input:focus {
-        border: 2px solid rgba(0, 0, 0, 0.18) !important;
-
-    }
-
-    .submit {
-      cursor: pointer;
-        border-radius: 5em;
-        color: #fff;
-        background: linear-gradient(to right, #2732b0, #4059fb);
-        border: 0;
-        padding-left: 40px;
-        padding-right: 40px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        font-family: 'Ubuntu', sans-serif;
-        margin-left: 0%;
-        font-size: 13px;
-        box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
-
-        text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-        text-decoration: none
-    }
-
-    /*.forgot {*/
-    /*    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);*/
-    /*    color: #E1BEE7;*/
-    /*    padding-top: 15px;*/
-    /*}*/
-
-
-    @media (max-width: 600px) {
-        .main {
-            border-radius: 0px;
-        }
-    }
+.login-link {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: #93cbef;
+    padding-top: 20px;
+    text-decoration: none;
+    font-weight: bold;
+}
