--- a/templates/post.html
+++ b/templates/post.html
@@ -1,64 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-body {
-  font-family: Arial;
-  padding: 20px;
-  background: #f1f1f1;
-}
+        body {
+            font-family: Arial;
+            padding: 20px;
+            background: lightblue;
+        }
 
-.header {
-  padding: 2px;
-  font-size: 40px;
-  text-align: center;
-  background: white;
-}
+        .header {
+            padding: 2px;
+            font-size: 40px;
+            text-align: center;
+            background: white;
+            color: darkblue;
+        }
 
-.leftcolumn {
-  float: left;
-  width: 100%;
-}
+        .leftcolumn {
+            float: left;
+            width: 100%;
+        }
 
-.card {
-   background-color: white;
-   padding: 20px;
-   margin-top: 20px;
-}
+        .card {
+            background-color: white;
+            padding: 20px;
+            margin-top: 20px;
+            color: darkblue;
+        }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
 
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {
-    width: 100%;
-    padding: 0;
-  }
-}
-</style>
+        @media screen and (max-width: 800px) {
+            .leftcolumn, .rightcolumn {
+                width: 100%;
+                padding: 0;
+            }
+        }
+    </style>
 </head>
 <body>
 
 <div class="header">
-  <h2>Cisco's Blog</h2>
+    <h2><a href="/" style="text-decoration: none; color: darkblue">Cisco's Blog</a></h2>
 </div>
 
 <div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-        <h2>{{post.title}}</h2>
-        <h5>{{post.created_at}}</h5>
-        <p>{{post.body}}</p>
+    <div class="leftcolumn">
+        <div class="card">
+            <h2>{{ post.title }}</h2>
+            <h5>{{ post.created_at }}</h5>
+            <p>{{ post.body }}</p>
+        </div>
     </div>
-  </div>
 </div>
 
 </body>
